Explicacion de CSS

--- a/config/custom.css
+++ b/config/custom.css
@@ -1,1 +1,9 @@
-/*Añade aqui los CSS del servidor*/
+/*Añade aqui los CSS del servidor. 
+Recuerda probar el estilo antes de Subirlo al server*/
+
+
+/*Añade asi el Fondo*/
+body{
+  background-image:url("Añade aqui el URL")!important
+  }
+/*Añade asi el Fondo*/
