--- a/config/custom.css
+++ b/config/custom.css
@@ -4,6 +4,6 @@ Recuerda probar el estilo antes de Subirlo al server*/
 
 /*Añade asi el Fondo*/
 body{
-  background-image:url("Añade aqui el URL")!important
+  background-image:url("http://i.imgur.com/5TPvPDv.png")!important
   }
 /*Añade asi el Fondo*/
